--- a/Angular/1Pw0.0/src/index.html
+++ b/Angular/1Pw0.0/src/index.html
@@ -5,7 +5,8 @@
   <title>1Pw00</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="img" type="image/png" href="img/logoPW.png">
+
 </head>
 <body>
   <app-root></app-root>
